Expand 'beyond errors'

--- a/EIPS/eip-1066.md
+++ b/EIPS/eip-1066.md
@@ -523,6 +523,28 @@ Much like how HTTP status codes have large unused ranges, there are totally empt
 sections in this proposal. The intent is to not impose a complete set of codes up front,
 and to allow users to suggest uses for these spaces as time progresses.
 
+### Beyond Errors
+
+This spec is intended to be much more than a set of common errors.
+One design goal is to enable easier contract-to-contract communication,
+protocols built on top of status codes, and flows that cross off-chain.
+Many of these cases include either expected kinds of exception state (as opposed to
+true errors), neutral states, time logic, and various successes.
+
+Just like how HTTP 200 has a different meaning from HTTP 201, ERC-1066 status codes
+can relay information between contract beyond simply pass or fail. They can be
+thought of as the edges in a graph that has smart contracts as nodes.
+
+### Fully `revert`able
+
+_This spec is fully compatible with `revert`-with-reason and does not intend
+to supplant it in any way._ Both by reverting with a common code, the developer
+can determine what went wrong from a set of known error states.
+
+Further, by leveraging ERC-1066 and a translation table (such as in ERC-1444)
+in conjunction, developers and end users alike can receive fully automated
+human-readable error messages in the language and phrasing of their choice.
+
 ### Nibble Order
 
 Nibble order makes no difference to the machine, and is purely mnemonic.
