--- a/EIPS/eip-1066.md
+++ b/EIPS/eip-1066.md
@@ -305,7 +305,7 @@ or process used.
 | `0xEE`          |                             |
 | `0xEF`          | Crypto Info or Meta         |
 
-#### `0xF0` Off-Chain
+#### `0xF*` Off-Chain
 
 For off-chain actions. Much like th `0x0_: Generic` range, `0xF*` is very general,
 and does little to modify the reason.
