Add many codes to ERC-1066
* General clean up
* Add version number
* Add clarifying text throughout
* Column updates:
  * 0x50: Token/finance
* Row updates:
  * Even rows are now consistently blocking conditions
  * Odd rows are consistently nonblocking conditions
  * Add 0x08 Duplicate
  * Move 0x05 Expired to 0x06
  * Swap 0x02 and 0x03 (awaiting and accepted)

--- a/EIPS/eip-1066.md
+++ b/EIPS/eip-1066.md
@@ -7,6 +7,7 @@ status: Draft
 type: Standards Track
 category: ERC
 created: 2018-05-05
+version: 1.0.0
 ---
 
 ## Simple Summary
@@ -15,7 +16,7 @@ Broadly applicable status codes for Ethereum smart contracts.
 
 ## Abstract
 
-This standard outlines a common set of Ethereum status codes (ESC) in the same
+This standard outlines a common set of Ethereum status codes (status code) in the same
 vein as HTTP statuses. This provides a shared set of signals to allow smart contracts
 to react to situations autonomously, expose localized error messages to users, and so on.
 
@@ -45,7 +46,7 @@ and tagged tuples to signify much the same information. Both provide a lot of
 information both to the programmer (debugging for instance), and to the program
 that needs to decide what to do next.
 
-ESCs convey a much richer set of information than Booleans,
+Status codes convey a much richer set of information than Booleans,
 and are able to be reacted to autonomously unlike arbitrary strings.
 
 ### User Feedback
@@ -55,12 +56,12 @@ human-readable sets of status messages. These may also be translated into any la
 differing levels of technical detail, added as `revert` messages, natspecs, and so on.
 
 We also see a desire for this [in transactions](http://eips.ethereum.org/EIPS/eip-658),
-and there's no reason that ESCs couldn't be used by the EVM itself.
+and there's no reason that status codes couldn't be used by the EVM itself.
 
 ### More than Pass/Fail
 
 While clearly related, status codes are complementary to "revert with reason".
-ESCs are not limited to rolling back the transaction, and may represent known error states
+Status codes are not limited to rolling back the transaction, and may represent known error states
 without halting execution. They may also represent off-chain conditions,
 supply a string to revert, signal time delays, and more.
 
@@ -109,122 +110,142 @@ Unspecified codes are _not_ free for arbitrary use, but rather open for further 
 
 General codes. These double as bare "reasons", since `0x01 == 1`.
 
-|  Code           | Description             |
-|-----------------|:------------------------|
-| `0x00`          | Failure                 |
-| `0x01`          | Success                 |
-| `0x02`          | Accepted / Started      |
-| `0x03`          | Awaiting / Before       |
-| `0x04`          | Action Required         |
-| `0x05`          | Expired                 |
-| `0x06`          |                         |
-| `0x07`          |                         |
-| `0x08`          |                         |
-| `0x09`          |                         |
-| `0x0A`          |                         |
-| `0x0B`          |                         |
-| `0x0C`          |                         |
-| `0x0D`          |                         |
-| `0x0E`          |                         |
-| `0x0F`          | Meta or Info Only       |
+| Code   | Description                             |
+|--------|-----------------------------------------|
+| `0x00` | Failure                                 |
+| `0x01` | Success                                 |
+| `0x02` | Awaiting Others                         |
+| `0x03` | Accepted                                |
+| `0x04` | Lower Limit or Insufficient             |
+| `0x05` | Reciever Action Requested               |
+| `0x06` | Upper Limit                             |
+| `0x07` |                                         |
+| `0x08` | Duplicate, Unnessesary, or Inapplicable |
+| `0x09` |                                         |
+| `0x0A` |                                         |
+| `0x0B` |                                         |
+| `0x0C` |                                         |
+| `0x0D` |                                         |
+| `0x0E` |                                         |
+| `0x0F` | Meta or Info Only                       |
 
-#### `0x1*` Permission
+#### `0x1*` Permission & Control
 
 Related to permisson, authorization, approval, and so on.
+Also used for common state machine actions (ex. "stoplight" actions).
 
-|  Code           | Description              |
-|-----------------|:-------------------------|
-| `0x10`          | Disallowed               |
-| `0x11`          | Allowed                  |
-| `0x12`          | Requested Permission     |
-| `0x13`          | Awaiting Permission      |
-| `0x14`          | Awaiting Your Permission |
-| `0x15`          | No Longer Allowed        |
-| `0x16`          |                          |
-| `0x17`          |                          |
-| `0x18`          |                          |
-| `0x19`          |                          |
-| `0x1A`          |                          |
-| `0x1B`          |                          |
-| `0x1C`          |                          |
-| `0x1D`          |                          |
-| `0x1E`          |                          |
-| `0x1F`          | Permission Meta or Info  |
+| Code   | Description                              |
+|--------|------------------------------------------|
+| `0x10` | Disallowed or Stop                       |
+| `0x11` | Allowed or Go                            |
+| `0x12` | Awaiting Other's Permission              |
+| `0x13` | Permission Requested                     |
+| `0x14` | Too Open / Insecure                      |
+| `0x15` | Revoked or Banned                        |
+| `0x16` |                                          |
+| `0x17` |                                          |
+| `0x18` | Not Applicatable to Current State        |
+| `0x19` |                                          |
+| `0x1A` |                                          |
+| `0x1B` |                                          |
+| `0x1C` |                                          |
+| `0x1D` |                                          |
+| `0x1E` |                                          |
+| `0x1F` | Permission Details or Control Conditions |
 
-#### `0x2*` Find, Match, &c
+#### `0x2*` Find, Inequalities & Range
 
 This range is broadly intended for finding and matching.
 Data lookups and order matching are two common use cases.
 
-|  Code           | Description              |
-|-----------------|:-------------------------|
-| `0x20`          | Not Found                |
-| `0x21`          | Found                    |
-| `0x22`          | Match Request Sent       |
-| `0x23`          | Awaiting Match           |
-| `0x24`          | Match Request Received   |
-| `0x25`          | Out of Range             |
-| `0x26`          |                          |
-| `0x27`          |                          |
-| `0x28`          |                          |
-| `0x29`          |                          |
-| `0x2A`          |                          |
-| `0x2B`          |                          |
-| `0x2C`          |                          |
-| `0x2D`          |                          |
-| `0x2E`          |                          |
-| `0x2F`          | Matching Meta or Info    |
+| Code   | Description                         |
+|--------|-------------------------------------|
+| `0x20` | Not Found, Unequal, or Out of Range |
+| `0x21` | Found, Equal or In Range            |
+| `0x22` | Awaiting Match                      |
+| `0x23` | Match Request Sent                  |
+| `0x24` | Below Range or Underflow            |
+| `0x25` | Request for Match                   |
+| `0x26` | Above Range or Overflow             |
+| `0x27` |                                     |
+| `0x28` | Duplicate, Conflict, or Collision   |
+| `0x29` |                                     |
+| `0x2A` |                                     |
+| `0x2B` |                                     |
+| `0x2C` |                                     |
+| `0x2D` |                                     |
+| `0x2E` |                                     |
+| `0x2F` | Matching Meta or Info               |
 
-#### `0x3*` Negotiation, Terms, and Offers
+#### `0x3*` Negotiation & Governance
 
 Negotiation, and very broadly the flow of such transactions.
 Note that "other party" may be more than one actor (not necessarily the sender).
 
-|  Code           | Description                 |
-|-----------------|:----------------------------|
-| `0x30`          | Other Party Disagreed       |
-| `0x31`          | Other Party Agreed          |
-| `0x32`          | Sent Offer                  |
-| `0x33`          | Awaiting Their Ratification |
-| `0x34`          | Awaiting Your Ratification  |
-| `0x35`          | Offer Expired               |
-| `0x36`          |                             |
-| `0x37`          |                             |
-| `0x38`          |                             |
-| `0x39`          |                             |
-| `0x3A`          |                             |
-| `0x3B`          |                             |
-| `0x3C`          |                             |
-| `0x3D`          |                             |
-| `0x3E`          |                             |
-| `0x3F`          | Negotiation Meta or Info    |
+| Code   | Description                             |
+|--------|-----------------------------------------|
+| `0x30` | Sender Disagrees or Nay                 |
+| `0x31` | Sender Agrees or Yea                    |
+| `0x32` | Awaiting Ratification                   |
+| `0x33` | Offer Sent or Voted                     |
+| `0x34` | Quorum Not Reached                      |
+| `0x35` | Receiver's Ratification Requested       |
+| `0x36` | Offer or Vote Limit Reached             |
+| `0x37` |                                         |
+| `0x38` | Already Voted                           |
+| `0x39` |                                         |
+| `0x3A` |                                         |
+| `0x3B` |                                         |
+| `0x3C` |                                         |
+| `0x3D` |                                         |
+| `0x3E` |                                         |
+| `0x3F` | Negotiation Rules or Participation Info |
 
-#### `0x4*` Availability
+#### `0x4*` Availability & Time
 
 Service or action availability.
 
-|  Code           | Description                 |
-|-----------------|:----------------------------|
-| `0x40`          | Unavailable                 |
-| `0x41`          | Available                   |
-| `0x42`          | You May Begin               |
-| `0x43`          | Not Yet Available           |
-| `0x44`          | Awaiting Your Availability  |
-| `0x45`          | No Longer Available         |
-| `0x46`          |                             |
-| `0x47`          |                             |
-| `0x48`          |                             |
-| `0x49`          |                             |
-| `0x4A`          |                             |
-| `0x4B`          |                             |
-| `0x4C`          |                             |
-| `0x4D`          |                             |
-| `0x4E`          |                             |
-| `0x4F`          | Availability Meta or Info   |
+| Code   | Description                                          |
+|--------|------------------------------------------------------|
+| `0x40` | Unavailable                                          |
+| `0x41` | Available                                            |
+| `0x42` | Paused                                               |
+| `0x43` | Queued                                               |
+| `0x44` | Not Available Yet                                    |
+| `0x45` | Awaiting Your Availability                           |
+| `0x46` | Expired                                              |
+| `0x47` |                                                      |
+| `0x48` | Already Done                                         |
+| `0x49` |                                                      |
+| `0x4A` |                                                      |
+| `0x4B` |                                                      |
+| `0x4C` |                                                      |
+| `0x4D` |                                                      |
+| `0x4E` |                                                      |
+| `0x4F` | Availability Rules or Info (ex. time since or until) |
 
-#### `0x5*` TBD
+#### `0x5*` Tokens, Funds & Finance
 
-Currently unspecified
+Special token and financial concepts. Many related concepts are included in other ranges.
+
+| Code   | Description                     |
+|--------|---------------------------------|
+| `0x50` | Transfer Failed                 |
+| `0x51` | Transfer Successful             |
+| `0x52` | Awaiting Payment From Others    |
+| `0x53` | Hold or Escrow                  |
+| `0x54` | Insufficient Funds              |
+| `0x55` | Funds Requested                 |
+| `0x56` | Transfer Volume Exceeded        |
+| `0x57` |                                 |
+| `0x58` | Funds Not Required              |
+| `0x59` |                                 |
+| `0x5A` |                                 |
+| `0x5B` |                                 |
+| `0x5C` |                                 |
+| `0x5D` |                                 |
+| `0x5E` |                                 |
+| `0x5F` | Token or Fiunancial Information |
 
 #### `0x6*` TBD
 
@@ -248,24 +269,24 @@ Contracts may have special states that they need to signal.
 This proposal only outlines the broadest meanings, but implementers may have very
 specific meanings for each, as long as they are coherent with the broader definition.
 
-|  Code           | Description                     |
-|-----------------|:--------------------------------|
-| `0xA0`          | App-Specific Failure            |
-| `0xA1`          | App-Specific Success            |
-| `0xA2`          | App-Specific Acceptance / Start |
-| `0xA3`          | App-Specific Awaiting / Before  |
-| `0xA4`          | App-Specific Action Required    |
-| `0xA5`          | App-Specific Expiry             |
-| `0xA6`          |                                 |
-| `0xA7`          |                                 |
-| `0xA8`          |                                 |
-| `0xA9`          |                                 |
-| `0xAA`          |                                 |
-| `0xAB`          |                                 |
-| `0xAC`          |                                 |
-| `0xAD`          |                                 |
-| `0xAE`          |                                 |
-| `0xAF`          | App-Specific Meta or Info       |
+| Code   | Description                            |
+|--------|----------------------------------------|
+| `0xA0` | App-Specific Failure                   |
+| `0xA1` | App-Specific Success                   |
+| `0xA2` | App-Specific Awaiting Others           |
+| `0xA3` | App-Specific Acceptance                |
+| `0xA4` | App-Specific Below Condition           |
+| `0xA5` | App-Specific Receiver Action Requested |
+| `0xA6` | App-Specific Expiry or Limit           |
+| `0xA7` |                                        |
+| `0xA8` | App-Specific Inapplicable Condition    |
+| `0xA9` |                                        |
+| `0xAA` |                                        |
+| `0xAB` |                                        |
+| `0xAC` |                                        |
+| `0xAD` |                                        |
+| `0xAE` |                                        |
+| `0xAF` | App-Specific Meta or Info              |
 
 #### `0xB*` TBD
 
@@ -279,57 +300,56 @@ Currently unspecified
 
 Currently unspecified
 
-#### `0xE*` Cryptography and Authentication
+#### `0xE*` Encryption, Identity & Proofs
 
 Actions around signatures, cryptography, signing, and application-level authentication.
 
-The meta code `0xEF` is often used to signal a payload descibing the algorithm
-or process used.
+The meta code `0xEF` is often used to signal a payload descibing the algorithm or process used.
 
-|  Code           | Description                 |
-|-----------------|:----------------------------|
-| `0xE0`          | Decrypt Failure             |
-| `0xE1`          | Decrypt Success             |
-| `0xE2`          | Signed                      |
-| `0xE3`          | Their Signature Required    |
-| `0xE4`          | Your Signature Required     |
-| `0xE5`          | Auth Expired                |
-| `0xE6`          |                             |
-| `0xE7`          |                             |
-| `0xE8`          |                             |
-| `0xE9`          |                             |
-| `0xEA`          |                             |
-| `0xEB`          |                             |
-| `0xEC`          |                             |
-| `0xED`          |                             |
-| `0xEE`          |                             |
-| `0xEF`          | Crypto Info or Meta         |
+| Code   | Description                         |
+|--------|-------------------------------------|
+| `0xE0` | Decrypt Failure                     |
+| `0xE1` | Decrypt Success                     |
+| `0xE2` | Awaiting Other Signatures or Keys   |
+| `0xE3` | Signed                              |
+| `0xE4` | Unsigned or Untrusted               |
+| `0xE5` | Signature Required                  |
+| `0xE6` | Known to be Comprimised             |
+| `0xE7` |                                     |
+| `0xE8` | Already Signed or Not Encrypted     |
+| `0xE9` |                                     |
+| `0xEA` |                                     |
+| `0xEB` |                                     |
+| `0xEC` |                                     |
+| `0xED` |                                     |
+| `0xEE` |                                     |
+| `0xEF` | Cryptography, ID, or Proof Metadata |
 
 #### `0xF0` Off-Chain
 
-For off-chain actions. Much like th `0x0_: Generic` range, `0xF*` is very general,
+For off-chain actions. Much like th `0x0*: Generic` range, `0xF*: Off-Chain` is very general,
 and does little to modify the reason.
 
 Among other things, the meta code `0xFF` may be used to describe what the off-chain process is.
 
-|  Code           | Description                   |
-|-----------------|:------------------------------|
-| `0xF0`          | Off-Chain Failure             |
-| `0xF1`          | Off-Chain Success             |
-| `0xF2`          | Off-Chain Process Stared      |
-| `0xF3`          | Awaiting Off-Chain Completion |
-| `0xF4`          | Off-Chain Action Required     |
-| `0xF5`          | Off-Chain Service Unavailable |
-| `0xF6`          |                               |
-| `0xF7`          |                               |
-| `0xF8`          |                               |
-| `0xF9`          |                               |
-| `0xFA`          |                               |
-| `0xFB`          |                               |
-| `0xFC`          |                               |
-| `0xFD`          |                               |
-| `0xFE`          |                               |
-| `0xFF`          | Off-Chain Info or Meta        |
+| Code   | Description                       |
+|--------|-----------------------------------|
+| `0xF0` | Off-Chain Failure                 |
+| `0xF1` | Off-Chain Success                 |
+| `0xF2` | Awaiting Off-Chain Process        |
+| `0xF3` | Off-Chain Process Started         |
+| `0xF4` | Off-Chain Service Unreachable     |
+| `0xF5` | Off-Chain Action Required         |
+| `0xF6` | Off-Chain Expiry or Limit Reached |
+| `0xF7` |                                   |
+| `0xF8` | Duplicate Off-Chain Request       |
+| `0xF9` |                                   |
+| `0xFA` |                                   |
+| `0xFB` |                                   |
+| `0xFC` |                                   |
+| `0xFD` |                                   |
+| `0xFE` |                                   |
+| `0xFF` | Off-Chain Info or Meta            |
 
 ### Example Function Change
 
@@ -349,7 +369,7 @@ function increase() public returns (bool _available) {
 
 // After
 function increase() public returns (byte _status) {
-    if (now < start) { return hex"43"; } // Not yet available
+    if (now < start) { return hex"44"; } // Not yet available
     if (counters[msg.sender] == 0) { return hex"10"; } // Not authorized
 
     counters[msg.sender] += 1;
@@ -363,7 +383,7 @@ function increase() public returns (byte _status) {
 0x03 = Waiting
 0x31 = Other Party (ie: not you) Agreed
 0x41 = Available
-0x43 = Not Yet Available
+0x44 = Not Yet Available
 
 
                           Exchange
@@ -376,14 +396,14 @@ AwesomeCoin                 DEX                     TraderBot
      |         buy()         |                          |
      | <---------------------+                          |
      |                       |                          |
-     |     Status [0x43]     |                          |
-     +---------------------> |       Status [0x43]      |
+     |     Status [0x44]     |                          |
+     +---------------------> |       Status [0x44]      |
      |                       +------------------------> |
      |                       |                          |
      |                       |        isDoneYet()       |
      |                       | <------------------------+
      |                       |                          |
-     |                       |       Status [0x43]      |
+     |                       |       Status [0x44]      |
      |                       +------------------------> |
      |                       |                          |
      |                       |                          |
@@ -457,7 +477,7 @@ AwesomeCoin                 DEX                     TraderBot
 
 ### Encoding
 
-ESCs are encoded as a `byte`. Hex values break nicely into high and low nibbles:
+status codes are encoded as a `byte`. Hex values break nicely into high and low nibbles:
 `category` and `reason`. For instance, `hex"01"` stands for general success
 and `hex"00"` for general failure.
 
@@ -484,7 +504,7 @@ or greater resorces allocated to interpreting 256<sup>4</sup> (4.3 billion) perm
 
 ### Multiple Returns
 
-While there may be cases where packing a byte array of ESCs may make sense, the simplest,
+While there may be cases where packing a byte array of status codes may make sense, the simplest,
 most forwards-compatible method of transmission is as the first value of a multiple return.
 
 Familiarity is also a motivating factor. A consistent position and encoding together
@@ -498,7 +518,7 @@ Cognitive load is lowered by organizing the table into categories and reasons.
 `0x10` and `0x11` belong to the same category, and `0x04` shares a reason with `0x24`
 
 While this repository includes helper enums, we have found working directly in
-the hex values to be quite natural. ESC `0x10` is just as comfortable as HTTP 401, for example.
+the hex values to be quite natural. status code `0x10` is just as comfortable as HTTP 401, for example.
 
 #### Localizations
 
