--- a/EIPS/eip-1066.md
+++ b/EIPS/eip-1066.md
@@ -571,8 +571,8 @@ This above also means that working with app-specific enums is slightly easier:
 enum Sleep {
     Awake,
     Asleep,
-    REM,
-    FallingAsleep
+    BedOccupied,
+    WindingDown
 }
 
 // From the helper library
