Point to updated lib

--- a/EIPS/eip-1066.md
+++ b/EIPS/eip-1066.md
@@ -565,7 +565,7 @@ contract Whitelist {
 
 #### Helpers
 
-This above also means that working with app-specific enums is slightly easier:
+This above also means that working with app-specific enums is slightly easier, and also saves gas (fewer operations required).
 
 ```solidity
 enum Sleep {
@@ -592,7 +592,7 @@ function appCode(Sleep _state) returns (byte code) {
 
 Reference cases and helper libraries (Solidity and JS) can be found at:
 * [Source Code](https://github.com/fission-suite/fission-codes/)
-* [Package on npm](https://www.npmjs.com/package/ethereum-status-codes)
+* [Package on npm](https://www.npmjs.com/package/fission-codes/)
 
 ## Copyright
 
